# Render-Engine-PageFind

./: README.md  pyproject.toml
.github/workflows/: publish.yml  static.yml
docs/: app.py
docs/pages/: plugin.md  theme.md
render_engine_pagefind/: __init__.py  plugin.py  theme.py
render_engine_pagefind/templates/: pagefind.html
